# algorithmzoo

./: README.md
cmake/: CMakeLists.txt  debug.sh
cmake/Body/: CMakeLists.txt
cmake/Peoplehead/: CMakeLists.txt
cpp/: .gitignore
cpp/body/: body.cpp  body.hpp
cpp/common/: algorithm_base.hpp
cpp/common/Excalibur/: operation_cut_border.hpp  operation_equalize_hist.hpp  operation_make_border.hpp  operation_merge_channel.hpp  operation_resize.hpp  operation_rgb2gray.hpp  operation_rotate.hpp  operation_safty_cut.hpp  pipeline.hpp
cpp/common/Primitives/: array_buffer.hpp  basic_allocator.hpp  basic_math.hpp  blas.hpp  bounded_blocking_queue.hpp  char8_t_remediation.hpp  circular_queue.hpp  compiler.hpp  delegate.hpp  dllexport.hpp  environment.hpp  filesystem.hpp  gpu.hpp  gpu_common.hpp  gpu_memory.hpp  hash_utils.hpp  heap_allocator.hpp  iterators.hpp  log.hpp  log_config.hpp  log_level.hpp  logger.hpp  memory.hpp  mutex_wrapper.hpp  os_context.hpp  pool_allocator.hpp  profiler.hpp  pure_c_handle_utils.h  scope_guard.hpp  simd_instruction_set.hpp  simd_types.hpp  singleton.hpp  source_location.hpp  stack_trace.hpp  syncedmem.hpp  tensor.hpp  tensor_conversions.hpp  tensor_converter.hpp  tensor_helper.hpp  tensor_layout.hpp  (+1 more)
cpp/common/Primitives/abi/: abi_standard_export.hpp  base.hpp  base_abi.hpp  basic_types.hpp  box_value.hpp  class_factory.hpp  component_loader.hpp  consumer.hpp  demangle.hpp  exceptions.hpp  fundamental_semantics.hpp  g6_abi_types.natvis  g6_attributes.hpp  guid.hpp  implements.hpp  iterable_object.hpp  meta.hpp  param_hash_map.hpp  param_span.hpp  param_string.hpp  param_string_allocations.hpp  param_vector.hpp  platform_encoding.hpp  sha3.hpp  sha3_details.hpp
cpp/common/Primitives/fmt/: core.h
cpp/common/Primitives/nlohmann/: json_extension.hpp
cpp/common/RKNN2Wrapper/: rknn2_wrapper.hpp
cpp/common/YoloFamily/: Yolo_wrapper.hpp
cpp/peoplehead/: peoplehead.cpp  peoplehead.hpp
test/: CMakeLists.txt  Dependencies.cmake  main.cpp
